zmake (1.8.1-1) bookworm jammy kinetic lunar; urgency=medium
  
  * New: option to run custom script after build
  * Fix: config files read order

 -- MelianMiko <melianmiko@gmail.com>  Mon, 08 May 2023 16:12:38 +0700

zmake (1.8-1) bookworm jammy kinetic lunar; urgency=medium

  * New: zeus-cli compat features (experimental)
  * New: auto-rgba mode
  * Fix: macOS: esbuild path resolve
  * Fix: macOS: Hand on build finish
  * Misc: ability to load config from user-profile dir
  * Misc: macOS: add ability to build with PySide6 instead of PySide2

 -- MelianMiko <melianmiko@gmail.com>  Wed, 03 May 2023 19:13:20 +0700

zmake (1.7-1) bookworm jammy kinetic lunar; urgency=medium

  * First debian build

 -- MelianMiko <melianmiko@gmail.com>  Sat, 15 Apr 2023 23:06:56 +0700